--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <div class="social-img-div">
       <a href="https://www.youtube.com/channel/UC2sJ6BQKjKxCtL_lHF1DUDg"><img class="youtube-img" src="image\youtube.svg" alt="Subscribe Here!"></a>
-      <img class="arrow-img" src="image\straight-right-arrow.svg" alt="">
+      <!-- <img class="arrow-img" src="image\straight-right-arrow.svg" alt=""> -->
     </div>
 
 
