add ukulele img

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="welcome-div">
 
       <h1 class="hello-h1">Hello and Welcome!</h1>
-      <!-- <img class="ukulele-img" src="image\ukelele.svg" alt=""> -->
+      <img class="ukulele-img" src="image\ukelele.svg" alt="">
 
     </div>
 
@@ -25,14 +25,14 @@
 
         <li class="song-item">
           <a class="link-name" href="https://youtu.be/nkt6mpYk9N0">Divinity Original Sin 2 Main Theme
-            <p class="song-type">Play Along / Tabs</p>
           </a>
+          <p class="song-type">Play Along / Tabs</p>
         </li>
 
         <li class="song-item">
           <a class="link-name" href="https://youtu.be/EdD-gQmdtrc">Somebody That I used to know
-            <p class="song-type">Play Along / Tabs</p>
           </a>
+          <p class="song-type">Play Along / Tabs</p>
         </li>
 
       </ul>
