Add 3 more songs

--- a/index.html
+++ b/index.html
@@ -39,6 +39,30 @@
         </li>
 
         <hr>
+
+        <li class="song-item">
+          <a class="link-name" href="https://youtu.be/YAcB4XZ9hrU">Baldur's Gate 3 - Down by the River
+          </a>
+          <p class="song-type">Play Along / Tabs</p>
+        </li>
+
+        <hr>
+
+        <li class="song-item">
+          <a class="link-name" href="https://youtu.be/LwqkwGGMcns">Divinity Original Sin 2 Rivellon
+          </a>
+          <p class="song-type">Play Along / Tabs</p>
+        </li>
+
+        <hr>
+
+        <li class="song-item">
+          <a class="link-name" href="https://youtu.be/0ZBAJNTSyVY">The Legend of Zelda - Ballad of the Goddess
+          </a>
+          <p class="song-type">Play Along / Tabs</p>
+        </li>
+
+        <hr>
       </ul>
     </div>
 
